# ejemplo_2026_nbdev

./: README.md  pyproject.toml
.github/workflows/: deploy.yaml  test.yaml
ejemplo_2026_nbdev/: _modidx.py  core.py  ejemplo.py
nbs/: 00_cluster.ipynb  index.ipynb  nbdev.yml
