[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ejemplo_2026_nbdev"
dynamic = ["version"]
description = "Un repositorio de prueba"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "msalazarcgeo", email = "msalazar@centrogeo.edu.mx"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/msalazarcgeo/ejemplo_2026_nbdev"
Documentation = "https://msalazarcgeo.github.io/ejemplo_2026_nbdev/"

[project.entry-points.nbdev]
ejemplo_2026_nbdev = "ejemplo_2026_nbdev._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "ejemplo_2026_nbdev.__version__"}

[tool.setuptools.packages.find]
include = ["ejemplo_2026_nbdev"]

[tool.nbdev]
